// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component should export support constants, types: support 1`] = `
{
  "TextAreResizeOrientation": {
    "both": "both",
    "default": undefined,
    "horizontal": "horizontal",
    "none": "none",
    "vertical": "vertical",
  },
}
`;

exports[`TextArea Component should handle readOnly, disabled: active 1`] = `
<textarea
  props="{
  "isReadOnly": false,
  "className": "",
  "id": null,
  "isDisabled": false,
  "name": null,
  "value": "",
  "ouiaId": "",
  "children": []
}"
>
  <textarea
    aria-invalid="false"
    class="pf-c-form-control quipucords-form__textarea  "
    data-ouia-component-id="generatedid-"
    id="generatedid-"
    name="generatedid-"
  />
</textarea>
`;

exports[`TextArea Component should handle readOnly, disabled: disabled 1`] = `
<textarea
  props="{
  "isReadOnly": false,
  "className": "",
  "id": null,
  "isDisabled": true,
  "name": null,
  "value": "",
  "ouiaId": "",
  "children": []
}"
>
  <textarea
    aria-invalid="false"
    class="pf-c-form-control quipucords-form__textarea  "
    data-ouia-component-id="generatedid-"
    disabled=""
    id="generatedid-"
    name="generatedid-"
  />
</textarea>
`;

exports[`TextArea Component should handle readOnly, disabled: readOnly 1`] = `
<textarea
  props="{
  "isReadOnly": true,
  "className": "",
  "id": null,
  "isDisabled": false,
  "name": null,
  "value": "",
  "ouiaId": "",
  "children": []
}"
>
  <textarea
    aria-invalid="false"
    class="pf-c-form-control quipucords-form__textarea  "
    data-ouia-component-id="generatedid-"
    id="generatedid-"
    name="generatedid-"
    readonly=""
  />
</textarea>
`;

exports[`TextArea Component should render a basic component: basic 1`] = `
<textarea
  props="{
  "className": "",
  "id": null,
  "isDisabled": false,
  "isReadOnly": false,
  "name": null,
  "value": "",
  "ouiaId": "",
  "children": []
}"
>
  <textarea
    aria-invalid="false"
    class="pf-c-form-control quipucords-form__textarea  "
    data-ouia-component-id="generatedid-"
    id="generatedid-"
    name="generatedid-"
  />
</textarea>
`;

exports[`TextArea Component should return an emulated onChange event: emulated event, change 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        data-ouia-component-id="generatedid-"
        id="generatedid-"
        name="generatedid-"
      >
        dolor sit
      </textarea>,
      "id": "generatedid-",
      "keyCode": undefined,
      "name": "generatedid-",
      "persist": [Function],
      "target": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        data-ouia-component-id="generatedid-"
        id="generatedid-"
        name="generatedid-"
      >
        dolor sit
      </textarea>,
      "value": "dolor sit",
    },
  ],
]
`;

exports[`TextArea Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        data-ouia-component-id="generatedid-"
        id="generatedid-"
        name="generatedid-"
      />,
      "id": "generatedid-",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        data-ouia-component-id="generatedid-"
        id="generatedid-"
        name="generatedid-"
      />,
      "value": "",
    },
  ],
]
`;
